--- a/.env
+++ b/.env
@@ -1,2 +1,5 @@
-MONGO_URI=mongodb://127.0.0.1:27017/studentdb
+# MONGO_URI=mongodb://127.0.0.1:27017/studentdb
+# PORT=5000
+MONGO_URI=mongodb+srv://moneshwar12345:moneshwar12345@studentdb.q3shv2t.mongodb.net/
+JWT_SECRET=mysecret123
 PORT=5000
