--- a/.env
+++ b/.env
@@ -1,5 +1,3 @@
-# MONGO_URI=mongodb://127.0.0.1:27017/studentdb
-# PORT=5000
-MONGO_URI=
-JWT_SECRET=mysecret123
+MONGO_URI=**************************
+JWT_SECRET=*************
 PORT=5000
